Tournament - Allowing stats to be on a specific pool
