# api/src/main/java/com/gberard/tournament/domain/port/input/TeamStatsUseCase.java
@@ -4,10 +4,15 @@ import com.gberard.tournament.domain.model.Team;
 import com.gberard.tournament.domain.model.stats.TeamStats;
 
 import java.util.List;
+import java.util.Optional;
 
 public interface TeamStatsUseCase {
 
     List<TeamStats> getTeamsStats();
 
     TeamStats getTeamStats(Team team);
+
+    List<TeamStats> getTeamsStatsByPool(String pool);
+
+    Optional<String> getTeamPool(Team team);
 }
